Changelog for GEMC
==================

10/9/18
 - removed JLAB_ROOT from field map search.


.. Note::
	9/25/18 gemc 2.7 released.

|

9/13/18
 - merged Zhiwen addition of 3D field map in cartesian coordinates

7/17/18
 - reintroduced material name in the gui

7/9/18
 - added DISPLACE_FIELDMAP and ROTATE_FIELDMAP options to displace and rotate a field map

7/3/18
 - fixed case where GEMC_DATA_DIR environment does not exist

6/29/18
 - dc routine fix - using new ccdb table

6/28/18
 - detectors and cad factory can read the env variable "GEMC_DATA_DIR" as a base path in the gcard
 - fixed time to distance table in gemc

6/18/18
 - fixed unsmeared ftof tdc

6/14/18
 - Micromegas digitization reading from correct CCDB table
 - Indentation that makes sense on BMT_hitprocess. Removed unnecessary comment for runno = -1
 - added PRODUCTIONCUTFORVOLUMES option. It is a list of volumes that will be assigned a production cut (in mm, last element of the list). Example:
 - PRODUCTIONCUTFORVOLUMES="outerMount, taggerInnerShield, outerFlange, outerMount, nut1, main-cone, DSShieldFrontLead, 100" will set the production cut for those volumes to 10 cm.

5/29/18
 - added 10 and 20 cases for FASTMCMODE in physics list

3/21/18
 - added option RFSTART: Radio-frequency time model. Available options are:

    - "eventVertex, 0, 0, 0" (default): the RF time is the event start time + the light time-distance of the first particle from the point (0,0,0)
    - "eventTime".....................: the RF time is identical to the event start time

 - removed some warning on gcc 4.8.5

3/16/18:
 - added option FILTER_NULL_VARIABLES. If set to one, do not write variables with no valuable information.

.. Note::
	3/8/18 gemc 2.6 released.

|

3/5/18
 - Rafo: fixed bug in ctof and ftof hit process routines

3/2/18
 - added side to ctof digitization output

3/1/18
 - removing unnecessary true info from background hits. ProcID is -1 for background hits.

2/28/18